# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

typemaps = [
  "//chrome/common/search.typemap",
  "//chrome/common/safe_browsing/safe_archive_analyzer.typemap",
  "//chrome/common/shell_handler_win.typemap",
]
