# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

typemaps = [
  "//chrome/common/search.typemap",
  "//chrome/services/file_util/public/interfaces/safe_archive_analyzer.typemap",
  "//chrome/services/media_gallery_util/public/interfaces/media_parser.typemap",
  "//chrome/services/util_win/public/interfaces/shell_util_win.typemap",
]
